--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main class="card-container">
-      
+      <blink>Ich blinke</blink>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
